--- a/arrangementer.html
+++ b/arrangementer.html
@@ -38,6 +38,10 @@
 <!--Containere som placerer menubaren i højreside af skærmen (style hertil fra w3schools: CSS Dropdown: https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_right)-->
             <div class="container" style="float: right;">
                 <div class="dropdown" style="float:right;">
+                                                    <!--Her er koden ikke valid, da validatoren siger dette:
+                                                    "The element button must not appear as a descendant of the a element."
+                                                    Det var ikke muligt at lave en menubar uden disse funktioner, hvor jeg kunne displaye
+                                                    menupunkterne under hinanden, derfor er der brugt button i et ahref-->
                     <a href="kontaktinformation.html"><button class="dropbtn">Kontaktinformation</button></a>
                 </div>
                 <div class="dropdown" style="float:right;">
@@ -56,6 +60,10 @@
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
+                                                    <!--Her er koden ikke valid, da validatoren siger dette:
+                                                    "The element button must not appear as a descendant of the a element."
+                                                    Det var ikke muligt at lave en menubar uden disse funktioner, hvor jeg kunne displaye
+                                                    menupunkterne under hinanden, derfor er der brugt button i et ahref-->
                     <a href="arrangementer.html"><button class="dropbtn">Arrangementer</button></a>
                     <div class="dropdown-content">
                     <a href="#">Baren</a>
