--- a/historie.html
+++ b/historie.html
@@ -39,6 +39,10 @@
 <!--Containere som placerer menubaren i højreside af skærmen (style hertil fra w3schools: CSS Dropdown: https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_right)-->
             <div class="container" style="float: right;">
                 <div class="dropdown" style="float:right;">
+                                                    <!--Her er koden ikke valid, da validatoren siger dette:
+                                                    "The element button must not appear as a descendant of the a element."
+                                                    Det var ikke muligt at lave en menubar uden disse funktioner, hvor jeg kunne displaye
+                                                    menupunkterne under hinanden, derfor er der brugt button i et ahref-->
                     <a href="kontaktinformation.html"><button class="dropbtn">Kontaktinformation</button></a>
                 </div>
                 <div class="dropdown" style="float:right;">
@@ -57,6 +61,10 @@
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
+                                                    <!--Her er koden ikke valid, da validatoren siger dette:
+                                                    "The element button must not appear as a descendant of the a element."
+                                                    Det var ikke muligt at lave en menubar uden disse funktioner, hvor jeg kunne displaye
+                                                    menupunkterne under hinanden, derfor er der brugt button i et ahref-->
                     <a href="arrangementer.html"><button class="dropbtn">Arrangementer</button></a>
                     <div class="dropdown-content">
                     <a href="#">Baren</a>
@@ -73,7 +81,7 @@
             <section class="container_1">
                 <img src="images/synge_mand.png" alt="synge mand" class="synge_mand">
         
-            <article class="artikel_1">
+        <article class="artikel_1">
             <div class="artikel1">
                 <p>
                     Hvis du leder efter „hvad skal man se i Aarhus”, er Radar ved Godsbanen et must. 
@@ -126,6 +134,7 @@
                     </p>
                 </div>
             </div>
+        </article>
                 <img src="images/mand_med_trumpet.png" alt="mand med trumpet" class="mand_med_trumpet">
             </div>
         </section>
