--- a/historie.html
+++ b/historie.html
@@ -33,7 +33,6 @@
 
 <!--Burgermenu label, som kommer frem i stedet for menubar ved mindre skærme-->
             <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
-    
 
 <!--Containere som placerer menubaren i højreside af skærmen (style hertil fra w3schools: CSS Dropdown: https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_right)-->
             <div class="container" style="float: right;">
@@ -59,7 +58,7 @@
                     <a href="historie.html">Radars historie</a>
                     </div>
                 </div>
-                <div class="dropdown" style="float:right;">
+                <diav class="dropdown" style="float:right;">
                                                     <!--Her er koden ikke valid, da validatoren siger dette:
                                                     "The element button must not appear as a descendant of the a element."
                                                     Det var ikke muligt at lave en menubar uden disse funktioner, hvor jeg kunne displaye
