--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -82,6 +82,7 @@
         <div class="tekst1">
             <h1>ISBJÖRG releasekoncert</h1>
 <!--Musik-knap og styling deraf er fra spotify-->
+<!--Koden er ikke valid i iframe, da stylingen ligger i koden-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1esgylY75bAdWCW8ItVOup?utm_source=generator&theme=0" width="100%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
